// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Kpi rendering tests subtitle defined - test 1`] = `
<div>
  <div
    class="bg-card text-card-foreground flex flex-col gap-6 rounded-xl border py-6 shadow-sm"
    data-slot="card"
    data-testid="kpi"
  >
    <div
      class="@container/card-header auto-rows-min grid-rows-[auto_auto] gap-2 px-6 has-data-[slot=card-action]:grid-cols-[1fr_auto] [.border-b]:pb-6 flex flex-row items-center justify-between space-y-0 pb-2"
      data-slot="card-header"
    >
      <div
        class="text-sm font-medium"
        data-slot="card-title"
      >
        title 123
      </div>
      <svg
        aria-hidden="true"
        class="lucide lucide-file-text h-4 w-4 text-muted-foreground"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M6 22a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h8a2.4 2.4 0 0 1 1.704.706l3.588 3.588A2.4 2.4 0 0 1 20 8v12a2 2 0 0 1-2 2z"
        />
        <path
          d="M14 2v5a1 1 0 0 0 1 1h5"
        />
        <path
          d="M10 9H8"
        />
        <path
          d="M16 13H8"
        />
        <path
          d="M16 17H8"
        />
      </svg>
    </div>
    <div
      class="px-6"
      data-slot="card-content"
    >
      <div
        class="text-2xl font-bold"
      >
        49
      </div>
      <p
        class="mt-1 text-xs text-muted-foreground"
      >
        subtitle 123
      </p>
    </div>
  </div>
</div>
`;

exports[`Kpi rendering tests subtitle undefined - test 1`] = `
<div>
  <div
    class="bg-card text-card-foreground flex flex-col gap-6 rounded-xl border py-6 shadow-sm"
    data-slot="card"
    data-testid="kpi"
  >
    <div
      class="@container/card-header auto-rows-min grid-rows-[auto_auto] gap-2 px-6 has-data-[slot=card-action]:grid-cols-[1fr_auto] [.border-b]:pb-6 flex flex-row items-center justify-between space-y-0 pb-2"
      data-slot="card-header"
    >
      <div
        class="text-sm font-medium"
        data-slot="card-title"
      >
        title 1
      </div>
      <svg
        aria-hidden="true"
        class="lucide lucide-file-text h-4 w-4 text-muted-foreground"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M6 22a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h8a2.4 2.4 0 0 1 1.704.706l3.588 3.588A2.4 2.4 0 0 1 20 8v12a2 2 0 0 1-2 2z"
        />
        <path
          d="M14 2v5a1 1 0 0 0 1 1h5"
        />
        <path
          d="M10 9H8"
        />
        <path
          d="M16 13H8"
        />
        <path
          d="M16 17H8"
        />
      </svg>
    </div>
    <div
      class="px-6"
      data-slot="card-content"
    >
      <div
        class="text-2xl font-bold"
      >
        49
      </div>
    </div>
  </div>
</div>
`;
